[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "keystone-vla"
version = "0.1.0"
description = "Geometry-guided self-consistency for diffusion/flow-matching physical AI: K-parallel sampling + cluster-medoid selection."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
keywords = ["vla", "robotics", "diffusion", "flow-matching", "self-consistency", "test-time-scaling", "physical-ai"]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/dywsjtu/keystone"
Paper = "https://arxiv.org/abs/2605.08638"

[tool.hatch.build.targets.wheel]
packages = ["src/keystone"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
